# kern

./: .gitignore  README.md  deploy.sh  index.html  package-lock.json  package.json
.zcode/plans/: plan-sess_09fd7288-d1a8-47ed-ae70-7cd8aef882f0.md  plan-sess_26d26c04-2114-4fc7-8efd-3b8437290c2a.md  plan-sess_350bd0c2-7f9d-45a2-af0a-6bed55d3a7f3.md  plan-sess_acd2fa9a-ca41-4acd-b41b-3c4fee761af2.md  plan-sess_c5360ad3-5775-4990-8ca5-4c8897f7316c.md
docs/: feature-mockups.html
documentation/: ArchitecturePlan.md  DesignGuide.md
plugins/discord_bot/: discord_bot.kern  manifest.json
plugins/minecraft_java/: manifest.json
scripts/: make-icon.mjs  make-installer-assets.mjs  make-installer-skin.mjs  prepare-nsis.mjs  render-icon.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  download.rs  java.rs  lib.rs  manifest.rs  metrics.rs  process.rs  registry.rs  scaffold.rs  scheduler.rs  search_ext.rs  seed.rs  sync.rs  tray.rs  watcher.rs  web_remote.rs  window_state.rs
src-tauri/windows/: .gitignore
src-tauri/windows/nsis-skin/: installer.nsi
src-tauri/windows/nsis-skin/skin/: configpage.xml  finishpage.xml  install.xml  installingpage.xml  msgBox.xml  uninstallfinishpage.xml  uninstallingpage.xml  uninstallpage.xml
src/components/: UpdateBanner.tsx
src/hooks/: useFileEditor.ts  useFileSearch.ts  useLiveStatus.ts  useLogActivity.ts  (+7 more)
video/: .gitignore  README.md  package.json  remotion.config.ts  tsconfig.json
(+66 files in other folders)
